--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,9 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - terraform init
+      - terraform init -backend-config="region=us-east-2" -backend-config="key=terraform_backend/${USER_ID}.tfstate"
       - terraform validate
-      - terraform plan
+      - terraform plan -var="user_id=${USER_ID} -var="user_node_ids=${USER_NODE_IDS}"
  
   build:
     commands:
