--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,8 +4,8 @@ phases:
     commands:
       - terraform init -backend-config="bucket=rln-${ENV}-terraform-backend" -backend-config="region=us-east-2" -backend-config="key=terraform_backend/${USER_ID}.tfstate"
       - terraform validate
-      - terraform plan -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS} -var="btc_network=${BTC_NETWORK} -var="btc_rpc=${BTC_RPC}"
+      - terraform plan -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS} -var="btc_network=${BTC_NETWORK} -var="btc_rpc=${BTC_RPC}" -var="env=${ENV}"
  
   build:
     commands:
-      - terraform apply --auto-approve -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS}" -var="btc_network=${BTC_NETWORK} -var="btc_rpc=${BTC_RPC}"
+      - terraform apply --auto-approve -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS}" -var="btc_network=${BTC_NETWORK} -var="btc_rpc=${BTC_RPC}" -var="env=${ENV}"
