--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
       - terraform apply --auto-approve -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS}" -var="btc_network=${BTC_NETWORK}" -var="btc_rpc=${BTC_RPC}" -var="env=${ENV}" -var="cognito_authorizer_id=${COGNITO_AUTH_ID}" -var="token_authorizer_id=${TOKEN_AUTHORIZER_ID}" -var=docker_image_tag=${DOCKER_IMAGE_TAG}
       - cd ../deployment
       - terraform init -backend-config="bucket=rln-${ENV}-terraform-backend" -backend-config="region=us-east-2" -backend-config="key=terraform_backend/${USER_ID}.tfstate"
-      - terraform apply --replace=aws_api_gateway_deployment.deployment
+      - terraform apply --replace=aws_api_gateway_deployment.deployment -var="rest_api_id="
