--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,11 @@ version: 0.2
 phases:
   build:
     commands:
-      - cd ebs
-      - terraform init -backend-config="bucket=rln-${ENV}-terraform-backend" -backend-config="region=us-east-2" -backend-config="key=terraform_backend/${USER_ID}.tfstate"
-      - terraform apply --replace=null_resource.detach_volume --auto-approve -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS}" -var="region=us-east-2" || terraform apply --auto-approve -var="user_id=${USER_ID}" -var="user_node_ids=${USER_NODE_IDS}" -var="region=us-east-2"
+      - VOLUME_ID=$(aws ec2 describe-volumes --filters Name=tag:Name,Values="rln-ebs-${USER_ID}-${NODE_ID}" --query "Volumes[0].VolumeId" --output text)
+      if aws ec2 describe-volumes --volume-ids $VOLUME_ID | grep -q "InstanceId"; then
+        aws ec2 detach-volume --volume-id $VOLUME_ID
+        aws ec2 wait volume-available --volume-ids $VOLUME_ID
+      fi
       - cd ../main
       - terraform init -backend-config="bucket=rln-${ENV}-terraform-backend" -backend-config="region=us-east-2" -backend-config="key=terraform_backend/${USER_ID}.tfstate"
       - terraform validate
