--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
           USER_NODE="{\"${NODE_ID}\"=\"${NODE_PORT}\"}"
         fi
         echo "USER_NODE: ${USER_NODE}"
-      - export TFSTATE_PATH="s3://rln-test-terraform-backend/terraform_backend/${USER_ID}/${NODE_ID}.tfstate"
+      - export TFSTATE_PATH="s3://rln-${ENV}-terraform-backend/terraform_backend/${USER_ID}/${NODE_ID}.tfstate"
       - export DEFAULT_LB_ARN="arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public/1c83ff42632a54a8"
       - export DEFAULT_LB_DNS="vpc-link-nlb-public-1c83ff42632a54a8.elb.us-east-2.amazonaws.com"
       - export DEFAULT_LB_ID="rf56qp"
@@ -52,6 +52,10 @@ phases:
             CHOSEN_LB_ID="o98iws"
           fi
         fi
+      - echo $LB1_LISTENERS
+      - echo $LB2_LISTENERS
+      - echo $LB3_LISTENERS
+      - echo $CHOSEN_LB_ARN
       - export TF_VAR_network_load_balancer_arn=$CHOSEN_LB_ARN
       - export TF_VAR_network_load_balancer_dns=$CHOSEN_LB_DNS
       - export TF_VAR_api_gateway_vpclink_id=$CHOSEN_LB_ID
