--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,10 +30,10 @@ phases:
         else
           echo "tfstate file not found. Checking NLB listener counts..."
           MAX_LISTENERS=48
-          LB1_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "$DEFAULT_LB_ARN" --query "Listeners | length(@)" --output text || echo 0)
-          LB2_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-2/c83eb6aa70e6aec9" --query "Listeners | length(@)" --output text || echo 0)
-          LB3_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-3/c5fe8631053259f3" --query "Listeners | length(@)" --output text || echo 0)
-          LB4_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-4/99b41a4daf28069d" --query "Listeners | length(@)" --output text || echo 0)
+          export LB1_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "$DEFAULT_LB_ARN" --query "Listeners | length(@)" --output text || echo 0)
+          export LB2_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-2/c83eb6aa70e6aec9" --query "Listeners | length(@)" --output text || echo 0)
+          export LB3_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-3/c5fe8631053259f3" --query "Listeners | length(@)" --output text || echo 0)
+          export LB4_LISTENERS=$(aws elbv2 describe-listeners --load-balancer-arn "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-4/99b41a4daf28069d" --query "Listeners | length(@)" --output text || echo 0)
           if [ "$LB1_LISTENERS" -le "$MAX_LISTENERS" ]; then
             export CHOSEN_LB_ARN="$DEFAULT_LB_ARN"
             export CHOSEN_LB_DNS="$DEFAULT_LB_DNS"
