add temp solution

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,9 +23,15 @@ phases:
           echo "LB_ARN: $LB_ARN"
           echo "LB_DNS: $LB_DNS"
           echo "VPC_LINK_ID: $VPC_LINK_ID"
-          export CHOSEN_LB_ARN=${LB_ARN:-$DEFAULT_LB_ARN}
-          export CHOSEN_LB_DNS=${LB_DNS:-$DEFAULT_LB_DNS}
-          export CHOSEN_LB_ID=${VPC_LINK_ID:-$DEFAULT_LB_ID}
+          if [ "$LB_ARN" = "arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public/1c83ff42632a54a8" ]; then
+              export CHOSEN_LB_ARN="arn:aws:elasticloadbalancing:us-east-2:339712759892:loadbalancer/net/vpc-link-nlb-public-2/c83eb6aa70e6aec9"
+              export CHOSEN_LB_DNS="vpc-link-nlb-public-2-c83eb6aa70e6aec9.elb.us-east-2.amazonaws.com"
+              export CHOSEN_LB_ID="z4wm6y"
+          else
+            export CHOSEN_LB_ARN=${LB_ARN:-$DEFAULT_LB_ARN}
+            export CHOSEN_LB_DNS=${LB_DNS:-$DEFAULT_LB_DNS}
+            export CHOSEN_LB_ID=${VPC_LINK_ID:-$DEFAULT_LB_ID}
+          fi
           rm -f node.tfstate
         else
           echo "tfstate file not found. Checking NLB listener counts..."
